Fixing stuffs on mobile

--- a/Test/style.css
+++ b/Test/style.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css2?family=Protest+Riot);
+@import url(https://fonts.googleapis.com/css2?family=Inter:wght@400&amp);
 
 * {
     margin: 0;
@@ -30,7 +31,7 @@ html{
 }
 
 body {
-    font-family: "Protest Riot", sans-serif;
+    font-family: "Protest Riot","Inter", sans-serif;
     font-weight: 400;
     line-height: 1.7;
     color: #000000;
@@ -284,10 +285,10 @@ main {
         text-align: center;
     }
     .footer_a_item {
-        font-size: 100.5%
+        width: 52vw;
     }
 
     .footer_b_item {
-        font-size: 100.5%
+        width: 52vw;
     }
 }
